--- a/app/src/main/res/layout/fragment_pdfs.xml
+++ b/app/src/main/res/layout/fragment_pdfs.xml
@@ -3,14 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.Pdfs">
+    tools:context=".Fragments.Pdfs"
+    android:background="@drawable/gradback">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="pdfs" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="330dp"
+        android:layout_marginTop="600dp"
+        android:clickable="true"
+        android:outlineAmbientShadowColor="#bd81f2"
+        android:outlineSpotShadowColor="@color/black"
+
+        android:src="@android:drawable/ic_input_add" />
 
 
 </FrameLayout>
