--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -17,7 +17,7 @@
         android:backgroundTint="#BD81F2"
         android:text="@string/login"
         android:textAllCaps="false"
-        android:textSize="18sp"
+        android:textSize="18dp"
         app:icon="@drawable/loginbutton"
         app:iconTint="#BD81F2"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +37,7 @@
         android:gravity="center"
         android:text="@string/signup"
         android:textAllCaps="false"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -52,7 +52,7 @@
         android:layout_height="86dp"
         android:text="@string/welcome_to_my_vault"
         android:textColor="@color/black"
-        android:textSize="29sp"
+        android:textSize="29dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
         android:text="@string/signup"
         android:textAllCaps="true"
         android:textColor="#5E35B1"
-        android:textSize="50sp"
+        android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
