--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -5,25 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.Images"
-    android:background="@drawable/gradback">
+    android:background="@raw/mainback2">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewImg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="images" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="600dp"
-        android:layout_marginLeft="330dp"
-        android:clickable="true"
-        android:outlineAmbientShadowColor="#bd81f2"
-        android:outlineSpotShadowColor="@color/black"
-
-        android:src="@android:drawable/ic_input_add" />
-
+        android:layout_marginTop="65dp"/>
 </FrameLayout>
