--- a/app/src/main/res/layout/activity_pdf_show.xml
+++ b/app/src/main/res/layout/activity_pdf_show.xml
@@ -6,6 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".PdfShowAct">
 
+    <WebView
+        android:visibility="invisible"
+        android:id="@+id/wb_webView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+    </WebView>
+    <ProgressBar
+        android:indeterminate="true"
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyle"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
