--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-android:background="@color/white"
+android:background="@drawable/gradback"
     tools:context=".SplashAct"
     >
 
@@ -14,7 +14,7 @@ android:background="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:lottie_autoPlay="true"
-        app:lottie_rawRes="@raw/splash"
+        app:lottie_rawRes="@raw/mysplasha"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
