--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -125,7 +125,7 @@
         android:autofillHints=""
         android:background="@drawable/textview"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textColor="@color/black"
         android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
