--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,9 @@ android:background="@drawable/tabback"
         app:tabIndicatorGravity="center"
         app:tabIndicatorAnimationMode="elastic"
         app:tabIndicatorColor="@null"
-        app:tabSelectedTextColor="@color/lavender"
+        app:tabSelectedTextColor="@color/orange"
         app:tabIndicator="@drawable/tabindicator"
+        app:tabIndicatorHeight="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -55,7 +56,7 @@ android:background="@drawable/tabback"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:backgroundTint="#6946A6"
+        app:backgroundTint="#FF9666"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.925"
@@ -69,7 +70,7 @@ android:background="@drawable/tabback"
         android:layout_width="55dp"
         android:layout_height="54dp"
         android:layout_marginBottom="24dp"
-        app:backgroundTint="#6946A6"
+        app:backgroundTint="#FF9666"
         app:fabSize="normal"
         app:layout_constraintBottom_toTopOf="@+id/fab"
         app:layout_constraintEnd_toEndOf="@+id/fab"
@@ -82,7 +83,7 @@ android:background="@drawable/tabback"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="UPLOAD"
-        android:background="#6946A6"
+        android:background="@color/orange"
         android:textStyle="bold"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
@@ -94,7 +95,7 @@ android:background="@drawable/tabback"
         android:layout_width="64dp"
         android:layout_height="56dp"
         android:layout_marginBottom="24dp"
-        app:backgroundTint="#6946A6"
+        app:backgroundTint="#FF9666"
         app:fabSize="normal"
         app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
         app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
@@ -107,7 +108,7 @@ android:background="@drawable/tabback"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="ABOUT US"
-        android:background="#6946A6"
+        android:background="@color/orange"
         android:textStyle="bold"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/profilefab"
