--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -18,6 +18,7 @@
         android:text="@string/login"
         android:textAllCaps="false"
         android:textSize="18dp"
+
         app:icon="@drawable/loginbutton"
         app:iconTint="#BD81F2"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -128,7 +129,7 @@
         android:autofillHints=""
         android:background="@drawable/textview"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:minHeight="48dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
