--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -15,4 +15,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="65dp"/>
+
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:queryHint="Search..."
+        android:iconifiedByDefault="false"
+        android:background="@drawable/searchview_back"
+        android:queryBackground="@android:color/transparent"/>
 </FrameLayout>
